fixed unnecessary spacing

--- a/server/adminportal/adminportal/static/css/styles.css
+++ b/server/adminportal/adminportal/static/css/styles.css
@@ -26,7 +26,7 @@ body {
 #showcase {
   position: relative;
   background: url('../images/sky.jpg');
-  background-size: 100%;
+  background-size: cover;
   min-height: 710px;  
 } 
 
